# chamado-health

./: .shellcheckrc  README.md  healthcheck.py  install_systemd.fish  install_systemd.sh  pyproject.toml  setup.fish  setup.sh
docs/: ping-payload.md
health_check/: __init__.py  _config.py  _ping.py
systemd/: chamado-health.service  chamado-health.timer  health-check.service  health-check.timer  health-monitor.service  health-monitor.timer
