[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-check"
version = "1.0.2"
description = "Lightweight Healthchecks.io ping client with opinionated payload (agent, device, ips, uptime)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.scripts]
health-check = "healthcheck:main"

[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B904",
]

[tool.ruff.lint.isort]
known-first-party = ["health_check"]
